2002-09-01  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v1.9.20.

        * PageModified.jsp and Preview.jsp are now included in the new
        template system.
        
        * SystemInfo.jsp is now removed.  A page called "SystemInfo" is
        taking its place.  It currently shows garbage, though.

        * Creating new pages should work now again.
        
        * Edit.jsp should no longer crash.  It's also been delegated
        properly into EditTemplate.jsp.

        * Added jspwiki.templateDir property.

        * Fixed PageInfo display - it now actually generates correct
        links. 

        * Fixed DiffLinkTag to actually generate correct links.

2002-08-29  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v1.9.19.

        * Plenty of changes to the JSP pages: created 8 new tags, shuffled
        things around.  Everything is still broken, but doc/Templates.txt
        should explain what we're about to do.

2002-08-19  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v1.9.18.

        * Moved stuff around, as plural forms of page names were not
        considered to exist by many of the internal routines, confusing
        UndefinedPages for example.  Found by Leigh Dodds.

2002-08-18  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v1.9.17.

        * All of the pages should now work.

        * Added Translate tag for writing Wiki content directly from the
        page.

        * Non-existing pages would crash both Wiki.jsp and Edit.jsp.  Now
        fixed.  Reported by Alain Ravet.

        * v1.9.16.

        * ViewTemplate.jsp is now done totally in tags.

        * Diff.jsp is now done totally in tags.

        * Added new tags: CheckVersion, InsertDiff, PageExists,
        PageVersion, PageDate.

2002-08-17  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v1.9.15.

        * Added a couple of new tags.
